# hackathon-tv5

./: .hackathon.json  README.md  deploy-cloudrun.sh  docker-compose.yml  package-lock.json  package.json
apps/emotistream/: .dockerignore  .env.example  .gitignore  CLI_IMPLEMENTATION.md  CLI_IMPLEMENTATION_SUMMARY.md  CONTENT_PROFILER_REPORT.md  Dockerfile  EMOTION_MODULE_SUMMARY.md  FEEDBACK_MODULE_SUMMARY.md  FIX-2-DETERMINISTIC-PROFILING-SUMMARY.md  PROJECT_SETUP_COMPLETE.md  README-API.md  README.md  RECOMMENDATION_ENGINE_COMPLETE.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json  (+2 more)
apps/emotistream-web/: .dockerignore  API_STATE_MANAGEMENT.md  Dockerfile  cloudbuild.yaml  next.config.cloudrun.ts  package-lock.json  package.json
crates/sona/: Cargo.toml
crates/sona/examples/: lora_storage_example.rs
crates/sona/src/: ab_testing.rs  cold_start.rs  collaborative.rs  content_based.rs  context.rs  diversity.rs  graph.rs  inference.rs  lib.rs  lora.rs  lora_storage.rs  main.rs  matrix_factorization.rs  profile.rs  recommendation.rs
crates/sona/src/tests/: lora_storage_test.rs  mod.rs  profile_test.rs  recommendation_test.rs
crates/sona/tests/: collaborative_filtering_test.rs  experiment_repository_integration_test.rs  graph_tests.rs  graph_unit_tests.rs  integration_test.rs
docs/: BATCH_011_COMPILATION_ANALYSIS.md  BATCH_INVENTORY_REPORT.md  Extra recommedations.md  FRONTEND_TESTING_CHECKLIST.md  FRONTEND_TEST_TEMPLATES.md  SUPABASE_MIGRATION_PLAN.md  emotistream-recommendation-engine-implementation.md
kubernetes/: ingress.yaml
src/: cli.ts
(+520 files in other folders)
