[package]
name = "media-gateway-sona"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sona-service"
path = "src/main.rs"

[dependencies]
media-gateway-core = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
qdrant-client = { workspace = true }

# Linear algebra and ML dependencies (SONA-specific)
ndarray = { version = "0.16", features = ["rayon"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dashmap = "6.1"
bincode = "1.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
